--- a/config.env.sample
+++ b/config.env.sample
@@ -1,29 +1,18 @@
-#!/bin/bash
-#
-# Copyright (C) 2020-2022 by UsergeTeam@Github, < https://github.com/UsergeTeam >.
-#
-# This file is part of < https://github.com/UsergeTeam/Userge > project,
-# and is released under the "GNU v3.0 License Agreement".
-# Please see < https://github.com/UsergeTeam/Userge/blob/master/LICENSE >
-#
-# All rights reserved.
-
-
 # ----------- REQUIRED ----------- #
 
 
 # Get them from https://my.telegram.org/
-API_ID=""
-API_HASH=""
+API_ID="15855531"
+API_HASH="31e0b87de4285ebff259e003f58bf469"
 
 
 # Mongodb url from https://cloud.mongodb.com/
 # comment below line if you are going to use docker !
-DATABASE_URL=""
+DATABASE_URL="mongodb+srv://Devilharsha:Devilharsha@cluster0.exwkd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 
 
 # Telegram Log Channel ID
-LOG_CHANNEL_ID=""
+LOG_CHANNEL_ID="-1001493634456"
 
 
 # one of USERGE MODE
